update project Monsters and fixed header alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2951,7 +2951,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#header {
-				padding: 4em 0 0.1em 0 ;
+				padding: 2.5em 0 0.1em 0 ;
 			}
 
 				#header nav {
